--- a/src/pages/videos/videos.html
+++ b/src/pages/videos/videos.html
@@ -7,7 +7,7 @@
   </ion-header>
   <ion-content id="page4">
     <div style="position:relative;overflow:hidden;padding-bottom:56.25%;height:0;" id="vDeo-video1">
-      <iframe width="100%" height="215" src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=0"></iframe>
+      <iframe width="100%" height="215" src="{{ video.url_video }}"></iframe>
     </div>
     <ion-list id="vDeo-list4">
       <ion-item id="vDeo-list-item-container1">
